fix: merubah route /user menjadi /auth
